--- a/smoketest/src/main/webapp/WEB-INF/web.xml
+++ b/smoketest/src/main/webapp/WEB-INF/web.xml
@@ -2,18 +2,30 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-         version="3.0">
+         version="3.0"> 
 
     <display-name>valintalaskentakoostepalvelu</display-name>
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring/application-context.xml</param-value>
+        <param-value>classpath:smoketest-application-context.xml</param-value>
     </context-param>
 
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+
+    <listener>
+        <listener-class>org.jasig.cas.client.session.SingleSignOutHttpSessionListener</listener-class>
+    </listener>
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <servlet>
         <servlet-name>cxf</servlet-name>
@@ -25,7 +37,6 @@
         <servlet-name>cxf</servlet-name>
         <url-pattern>/resources/*</url-pattern>
     </servlet-mapping>
-
 
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
