--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -11,3 +11,4 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 log4j.logger.org.springframework=WARN
 log4j.logger.org.mockserver=WARN
 #log4j.logger.org.eclipse.jetty=DEBUG
+log4j.logger.fi.vm.sade.valinta.http.ExtractSuccessfullResponseCallback=OFF
