--- a/src/main/resources/META-INF/kela.properties
+++ b/src/main/resources/META-INF/kela.properties
@@ -1,6 +1,6 @@
 
-kela.ftp.username=te1930
-kela.ftp.password=dOm3WREq
+kela.ftp.username=
+kela.ftp.password=
 kela.ftp.host=ftp1.kela.fi
 kela.ftp.port=21
 kela.ftp.protocol=ftps
