--- a/pom.xml
+++ b/pom.xml
@@ -412,6 +412,10 @@
 			<artifactId>commons-collections</artifactId>
 			<version>3.2.1</version>
 		</dependency>
+		<dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongo-java-driver</artifactId>
+	  </dependency>
 		<!--<dependency> -->
 		<!--<groupId>org.apache.camel</groupId> -->
 		<!--<artifactId>camel-cxf</artifactId> -->
