--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>fi.vm.sade</groupId>
 			<artifactId>hakemuseditori_2.11</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>yhdenpaikansaanto-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>*</groupId>
