--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,7 @@
 		<dependency>
 			<groupId>com.wordnik</groupId>
 			<artifactId>swagger-jaxrs_2.11</artifactId>
-			<version>${swagger.version}</version>
+			<version>1.3.12</version>
 			<exclusions>
 				<exclusion>
 					<groupId>javax.ws.rs</groupId>
