--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>fi.vm.sade.valintaperusteet</groupId>
 		<artifactId>valintaperusteet</artifactId>
-		<version>yhdenpaikansaanto-SNAPSHOT</version>
+		<version>2.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<properties>
