--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
 			<groupId>fi.vm.sade</groupId>
 			<artifactId>scala-utils_2.11</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.fasterxml.jackson.dataformat</groupId>
+					<artifactId>jackson-dataformat-yaml</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.scala-lang</groupId>
@@ -64,6 +70,10 @@
 			<artifactId>authentication-domain</artifactId>
 			<version>13.0-SNAPSHOT</version>
 			<exclusions>
+				<exclusion>
+					<groupId>org.codehaus.jackson</groupId>
+					<artifactId>jackson-jaxrs</artifactId>
+				</exclusion>
 				<exclusion>
 					<groupId>joda-time</groupId>
           			<artifactId>joda-time</artifactId>
@@ -268,6 +278,12 @@
 			<groupId>fi.vm.sade.sijoittelu</groupId>
 			<artifactId>sijoittelu-algoritmi-domain</artifactId>
 			<version>${project.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.codehaus.jackson</groupId>
+					<artifactId>jackson-core-asl</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>fi.vm.sade.sijoittelu</groupId>
