--- a/pom.xml
+++ b/pom.xml
@@ -273,7 +273,7 @@
 		<dependency>
 			<groupId>fi.vm.sade.sijoittelu</groupId>
 			<artifactId>sijoittelu-algoritmi-domain</artifactId>
-			<version>${project.version}</version>
+			<version>3.0-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.codehaus.jackson</groupId>
@@ -284,7 +284,7 @@
 		<dependency>
 			<groupId>fi.vm.sade.sijoittelu</groupId>
 			<artifactId>sijoittelu-tulos-api</artifactId>
-			<version>${project.version}</version>
+			<version>3.0-SNAPSHOT</version>
 		</dependency>
 
 
