--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>fi.vm.sade.valintaperusteet</groupId>
 		<artifactId>valintaperusteet</artifactId>
-		<version>6.0_hyvaksymiskirje-lahetetty-flag-SNAPSHOT</version>
+		<version>2.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<properties>
@@ -273,7 +273,7 @@
 		<dependency>
 			<groupId>fi.vm.sade.sijoittelu</groupId>
 			<artifactId>sijoittelu-algoritmi-domain</artifactId>
-			<version>6.0_hyvaksymiskirje-lahetetty-flag-SNAPSHOT</version>
+			<version>3.0-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.codehaus.jackson</groupId>
@@ -284,7 +284,7 @@
 		<dependency>
 			<groupId>fi.vm.sade.sijoittelu</groupId>
 			<artifactId>sijoittelu-tulos-api</artifactId>
-			<version>6.0_hyvaksymiskirje-lahetetty-flag-SNAPSHOT</version>
+			<version>3.0-SNAPSHOT</version>
 		</dependency>
 
 
