--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
 
 	<dependencies>
 		<dependency>
+      <groupId>fi.vm.sade.generic</groupId>
+      <artifactId>generic-common</artifactId>
+  	</dependency>
+		<dependency>
 			<groupId>fi.vm.sade</groupId>
 			<artifactId>auditlogger</artifactId>
 		</dependency>
