--- a/pom.xml
+++ b/pom.xml
@@ -127,9 +127,8 @@
 			<artifactId>cas-client-support-distributed-ehcache</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.wordnik</groupId>
-			<artifactId>swagger-jaxrs_2.11</artifactId>
-			<version>1.3.12</version>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-jaxrs</artifactId>
 			<exclusions>
 				<exclusion>
 					<groupId>javax.ws.rs</groupId>
