--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,13 @@
       <artifactId>generic-common</artifactId>
   	</dependency>
 		<dependency>
-      <groupId>fi.vm.sade.java-utils</groupId>
-      <artifactId>opintopolku-cas-servlet-filter</artifactId>
+			<groupId>fi.vm.sade.java-utils</groupId>
+			<artifactId>java-properties</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+      		<groupId>fi.vm.sade.java-utils</groupId>
+      		<artifactId>opintopolku-cas-servlet-filter</artifactId>
 	  </dependency>
 		<dependency>
 			<groupId>fi.vm.sade</groupId>
