--- a/pom.xml
+++ b/pom.xml
@@ -231,7 +231,7 @@
 		<dependency>
 			<groupId>fi.vm.sade.sijoittelu</groupId>
 			<artifactId>sijoittelu-algoritmi-domain</artifactId>
-			<version>5.1-SNAPSHOT</version>
+			<version>5.2-OK_112-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.codehaus.jackson</groupId>
@@ -242,7 +242,7 @@
 		<dependency>
 			<groupId>fi.vm.sade.sijoittelu</groupId>
 			<artifactId>sijoittelu-tulos-api</artifactId>
-			<version>5.1-SNAPSHOT</version>
+			<version>5.2-OK_112-SNAPSHOT</version>
 		</dependency>
 
 
