--- a/src/main/resources/valintalaskentakoostepalvelu-oph.properties
+++ b/src/main/resources/valintalaskentakoostepalvelu-oph.properties
@@ -115,7 +115,7 @@ valinta-tulos-service.haku.hakuoid=${baseurl-valinta-tulos-service}/valinta-tulo
 valinta-tulos-service.haku.hakuoid.hakemus=${baseurl-valinta-tulos-service}/valinta-tulos-service/haku/$1/hakemus/$2
 valinta-tulos-service.virkailija.haku.hakukohde=${baseurl-valinta-tulos-service}/valinta-tulos-service/virkailija/haku/$1/hakukohde/$2
 valinta-tulos-service.virkailija.valintatulos.haku.hakukohde=${baseurl-valinta-tulos-service}/valinta-tulos-service/virkailija/valintatulos/haku/$1/hakukohde/$2
-valinta-tulos-service.virkailija.valintatulos.lukuvuosimaksu=${baseurl-valinta-tulos-service}/valinta-tulos-service/lukuvuosimaksu/$1
+valinta-tulos-service.virkailija.valintatulos.lukuvuosimaksu=${baseurl-valinta-tulos-service}/valinta-tulos-service/lukuvuosimaksu/$1?kutsuja=$2
 valinta-tulos-service.virkailija.valintatulos.ilmanhakijantilaa.haku.hakukohde=${baseurl-valinta-tulos-service}/valinta-tulos-service/virkailija/valintatulos/ilmanhakijantilaa/haku/$1/hakukohde/$2
 valinta-tulos-service.virkailija.valintatulos.haku.hakemus=${baseurl-valinta-tulos-service}/valinta-tulos-service/virkailija/valintatulos/haku/$1/hakemus/$2
 valinta-tulos-service.virkailija.myohastyneet.haku.hakukohde=${baseurl-valinta-tulos-service}/valinta-tulos-service/virkailija/myohastyneet/haku/$1/hakukohde/$2
