--- a/src/main/resources/valintalaskentakoostepalvelu-oph.properties
+++ b/src/main/resources/valintalaskentakoostepalvelu-oph.properties
@@ -112,6 +112,7 @@ valintaperusteet-service.valintalaskentakoostepalvelu.valintatapajono=${baseurl-
 
 valinta-tulos-service.erillishaku.valinnan-tulos=${baseurl-valinta-tulos-service}/valinta-tulos-service/erillishaku/valinnan-tulos/$1
 valinta-tulos-service.haku.hakuoid=${baseurl-valinta-tulos-service}/valinta-tulos-service/haku/$1
+valinta-tulos-service.muutoshistoria=${baseurl-valinta-tulos-service}/valinta-tulos-service/muutoshistoria/?hakemusOid=$1&valintatapajonoOid=$2
 valinta-tulos-service.haku.hakuoid.hakemus=${baseurl-valinta-tulos-service}/valinta-tulos-service/haku/$1/hakemus/$2
 valinta-tulos-service.virkailija.haku.hakukohde=${baseurl-valinta-tulos-service}/valinta-tulos-service/virkailija/haku/$1/hakukohde/$2
 valinta-tulos-service.virkailija.valintatulos.haku.hakukohde=${baseurl-valinta-tulos-service}/valinta-tulos-service/virkailija/valintatulos/haku/$1/hakukohde/$2
