--- a/src/main/resources/valintalaskentakoostepalvelu-oph.properties
+++ b/src/main/resources/valintalaskentakoostepalvelu-oph.properties
@@ -123,6 +123,7 @@ valinta-tulos-service.virkailija.tilahakijalle.haku.hakukohde.valintatapajono=${
 valinta-tulos-service.virkailija.vastaanotto.hakukohde=${baseurl-valinta-tulos-service}/valinta-tulos-service/virkailija/vastaanotto/hakukohde/$1
 valinta-tulos-service.virkailija.vastaanotto.poista=${baseurl-valinta-tulos-service}/valinta-tulos-service/virkailija/vastaanotto/poista
 valinta-tulos-service.virkailija.vastaanotto=${baseurl-valinta-tulos-service}/valinta-tulos-service/virkailija/vastaanotto
+valinta-tulos-service.sijoittelu.sijoitteluajo.hakukohde=${baseurl-valinta-tulos-service}/valinta-tulos-service/sijoittelu/$1/sijoitteluajo/$2/hakukohde/$3
 
 viestintapalvelu.letter.async.letter=${baseurl-viestintapalvelu}/viestintapalvelu/api/v1/letter/async/letter
 viestintapalvelu.letter.async.letter.status=${baseurl-viestintapalvelu}/viestintapalvelu/api/v1/letter/async/letter/status/$1
