--- a/src/main/resources/valintalaskentakoostepalvelu-oph.properties
+++ b/src/main/resources/valintalaskentakoostepalvelu-oph.properties
@@ -115,7 +115,6 @@ valinta-tulos-service.erillishaku.valinnan-tulos=${baseurl-valinta-tulos-service
 valinta-tulos-service.haku.hakuoid=${baseurl-valinta-tulos-service}/valinta-tulos-service/haku/$1
 valinta-tulos-service.muutoshistoria=${baseurl-valinta-tulos-service}/valinta-tulos-service/muutoshistoria/?hakemusOid=$1&valintatapajonoOid=$2
 valinta-tulos-service.haku.hakuoid.hakemus=${baseurl-valinta-tulos-service}/valinta-tulos-service/haku/$1/hakemus/$2
-valinta-tulos-service.haku.hakukohde.hyvaksytyt=${baseurl-valinta-tulos-service}/valinta-tulos-service/haku/$1/hakukohde/$2/hyvaksytyt
 valinta-tulos-service.virkailija.haku.hakukohde=${baseurl-valinta-tulos-service}/valinta-tulos-service/virkailija/haku/$1/hakukohde/$2
 valinta-tulos-service.virkailija.valintatulos.haku.hakukohde=${baseurl-valinta-tulos-service}/valinta-tulos-service/virkailija/valintatulos/haku/$1/hakukohde/$2
 valinta-tulos-service.virkailija.valintatulos.lukuvuosimaksu=${baseurl-valinta-tulos-service}/valinta-tulos-service/lukuvuosimaksu/$1/$2
@@ -128,7 +127,8 @@ valinta-tulos-service.virkailija.vastaanotto.poista=${baseurl-valinta-tulos-serv
 valinta-tulos-service.virkailija.vastaanotto=${baseurl-valinta-tulos-service}/valinta-tulos-service/virkailija/vastaanotto
 valinta-tulos-service.sijoittelu.sijoitteluajo.hakukohde=${baseurl-valinta-tulos-service}/valinta-tulos-service/sijoittelu/$1/sijoitteluajo/$2/hakukohde/$3
 valinta-tulos-service.haku.sijoitteluajo.latest.hakemus=${baseurl-valinta-tulos-service}/valinta-tulos-service/haku/$1/sijoitteluajo/latest/hakemus/$3
-valinta-tulos-service.haku.sijoitteluajo.latest.hakemukset=${baseurl-valinta-tulos-service}/valinta-tulos-service/haku/$1/sijoitteluajo/latest/hakemus/$3
+valinta-tulos-service.haku.hakukohde.hakijat=${baseurl-valinta-tulos-service}/valinta-tulos-service/haku/$1/hakukohde/$2/hakijat
+valinta-tulos-service.haku.hakukohde.hyvaksytyt=${baseurl-valinta-tulos-service}/valinta-tulos-service/haku/$1/hakukohde/$2/hyvaksytyt
 
 viestintapalvelu.reportMessages=${baseurl-viestintapalvelu}/ryhmasahkoposti-service/reportMessages/view/letter/$1
 viestintapalvelu.letter.async.letter=${baseurl-viestintapalvelu}/viestintapalvelu/api/v1/letter/async/letter
