--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 		<dependency>
 			<groupId>fi.vm.sade</groupId>
 			<artifactId>auditlogger</artifactId>
-			<version>7.1.0-SNAPSHOT</version>
+			<version>${auditlog.api.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
