--- a/src/main/resources/valintalaskentakoostepalvelu-oph.properties
+++ b/src/main/resources/valintalaskentakoostepalvelu-oph.properties
@@ -16,11 +16,12 @@ baseurl-valintalaskenta-laskenta-service=${url-ilb}
 baseurl-valintaperusteet-service=${url-ilb}
 baseurl-valinta-tulos-service=${url-ilb}
 baseurl-viestintapalvelu=${url-virkailija}
+baseurl-oppijanumerorekisteri-service=${url-virkailija}
 
 dokumenttipalvelu-service.dokumentit.uudelleennimea=${baseurl-dokumenttipalvelu}/dokumenttipalvelu-service/resources/dokumentit/uudelleennimea/$1
 dokumenttipalvelu-service.dokumentit.tallenna=${baseurl-dokumenttipalvelu}/dokumenttipalvelu-service/resources/dokumentit/tallenna
 
-authentication-service.s2s.koostepalvelu=${baseurl-authentication-service}/authentication-service/resources/s2s/koostepalvelu
+oppijanumerorekisteri-service.s2s.henkilo.findOrCreateMultiple=${baseurl-oppijanumerorekisteri-service}/oppijanumerorekisteri-service/s2s/henkilo/findOrCreateMultiple
 
 haku-app.applications.syntheticapplication=${baseurl-haku-app}/haku-app/applications/syntheticApplication
 haku-app.applications.listfull=${baseurl-haku-app}/haku-app/applications/listfull
