--- a/src/main/resources/valintalaskentakoostepalvelu-oph.properties
+++ b/src/main/resources/valintalaskentakoostepalvelu-oph.properties
@@ -1,5 +1,5 @@
 url-virkailija=https://${host.virkailija}
-url-ilb=${host.ilb}
+url-ilb=${host_alb}
 
 baseurl-dokumenttipalvelu=${url-virkailija}
 baseurl-authentication-service=${url-virkailija}
