--- a/pom.xml
+++ b/pom.xml
@@ -205,14 +205,9 @@
 
 		<!-- POI -->
 		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi</artifactId>
-			<version>3.17</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi-ooxml</artifactId>
-			<version>3.17</version>
+			<groupId>fi.vm.sade.java-utils</groupId>
+			<artifactId>java-poi</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>dom4j</artifactId>
