--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
       </exclusions>
     </dependency>
     <dependency>
+      <groupId>fi.vm.sade.sharedutils</groupId>
+      <artifactId>Sharedutils</artifactId>
+      <version>4.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>fi.vm.sade.valintaperusteet</groupId>
       <artifactId>http</artifactId>
       <version>${project.version}</version>
