--- a/pom.xml
+++ b/pom.xml
@@ -682,6 +682,11 @@
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
+        <dependency>
+            <groupId>fi.vm.sade.sharedutils</groupId>
+            <artifactId>Sharedutils</artifactId>
+            <version>4.0-SNAPSHOT</version>
+        </dependency>
   </dependencies>
   <build>
     <finalName>${project.artifactId}</finalName>
