--- a/src/main/resources/valintalaskentakoostepalvelu-oph.properties
+++ b/src/main/resources/valintalaskentakoostepalvelu-oph.properties
@@ -22,6 +22,7 @@ dokumenttipalvelu-service.dokumentit.uudelleennimea=${baseurl-dokumenttipalvelu}
 dokumenttipalvelu-service.dokumentit.tallenna=${baseurl-dokumenttipalvelu}/dokumenttipalvelu-service/resources/dokumentit/tallenna
 
 oppijanumerorekisteri-service.s2s.henkilo.findOrCreateMultiple=${baseurl-oppijanumerorekisteri-service}/oppijanumerorekisteri-service/s2s/henkilo/findOrCreateMultiple
+oppijanumerorekisteri-service.s2s.henkilo.findByPersonOidList=${baseurl-oppijanumerorekisteri-service}/oppijanumerorekisteri-service/henkilo/henkiloPerustietosByHenkiloOidList
 
 haku-app.applications.syntheticapplication=${baseurl-haku-app}/haku-app/applications/syntheticApplication
 haku-app.applications.listfull=${baseurl-haku-app}/haku-app/applications/listfull
