--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
     </dependency>
     <dependency>
       <groupId>fi.vm.sade.java-utils</groupId>
+      <artifactId>java-http</artifactId>
+      <version>0.1.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>fi.vm.sade.java-utils</groupId>
       <artifactId>opintopolku-cas-servlet-filter</artifactId>
     </dependency>
     <dependency>
