--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -12,3 +12,4 @@ log4j.logger.org.springframework=WARN
 log4j.logger.org.mockserver=WARN
 #log4j.logger.org.eclipse.jetty=DEBUG
 log4j.logger.fi.vm.sade.valinta.http.ExtractSuccessfullResponseCallback=OFF
+log4j.logger.org.apache.http.client.protocol.ResponseProcessCookies=ERROR
